# OpenSK

./: CMakeLists.txt  LICENSE  PlatformUnix.cmake  PlatformWindows.cmake  README.md
OpenSK/: opensk.c  opensk.h  opensk_alsa.c  opensk_platform.h
OpenSK/dev/: assert.h  hosts.h  json.c  json.h  macros.h  objects.h  string.c  string.h  utils.c  utils.h  vector.c  vector.h
OpenSK/ext/: fileio.c  fileio.h  host_machine.c  host_machine.h  ring_buffer.c  ring_buffer.h  ringbuffer.c  ringbuffer.h  sk_driver.c  sk_driver.h  sk_global.c  sk_global.h  sk_layer.c  sk_layer.h  sk_loader.c  sk_loader.h  sk_stream.c  sk_stream.h  string_heap.c  string_heap.h  utils.c  utils.h
OpenSK/host/: alsa.c
OpenSK/icd/: alsa.h
OpenSK/man/: manifest.c  manifest.h  manifest_1_0_0.c  manifest_1_0_0.h
OpenSK/plt/: platform.h  platform_unix.c  platform_windows.c
OpenSK/utl/: allocators.h  allocators_unix.c  allocators_windows.c  color_config.c  color_config.h  color_database.c  color_database.h  error.c  error.h  macros.h  ring_buffer.c  ring_buffer.h  string.c  string.h
cmake/: functions.cmake  submodules.cmake
cmake/Modules/: FindUDev.cmake  Findlibuuid.cmake
drivers/: CMakeLists.txt  README.md
drivers/alsa/: alsa.c  convert.h  manifest.json  udev.c  udev.h
layers/: CMakeLists.txt
layers/validation/: manifest.json  validation.c
samples/: CMakeLists.txt
samples/init/: main.c
selkie/: selkie.h  selkie_alsa.c  selkie_platform.h
tests/: CMakeLists.txt  SKCOLORS.long  SKCOLORS.multi  SKCOLORS.single  unit_runner.c  unit_suites.inc.in
tests/unit/: SkColorDatabaseUTL.c  SkHostMachineEXT.c  SkRingBufferEXT.c  SkStringHeapEXT.c  SkStringUTL.c  cmocka.h
utils/: CMakeLists.txt
utils/common/: common.c  common.h
utils/skdbg/: main.c
utils/skdd/: main.c
utils/skecho/: main.c
utils/skfreq/: freq.inc  main.c  notes.inc
utils/skinfo/: main.c
utils/skls/: SKCOLORS  main.c
utils/skplay/: main.c
