################################################################################
# Project: SelKie
# Legal  : All content 2016 Trent Reed, all rights reserved.
# Author : Trent Reed
# About  : Sample projects to demonstrate the functionality of SelKie.
################################################################################

add_executable(init init/main.c)
target_link_libraries(init selkie)
